# test

./: CMakeLists.txt  main.cpp  test.cpp
.github/workflows/: build.yml  ci.yml
include/: ConcreteStrategyA.h  ConcreteStrategyB.h  Context.h  Strategy.h
src/: CredetCard.h  CreditCard.cpp  CreditCard.h  PayByCreditCard.cpp  PayByCreditCard.h  PayByPayPal.cpp  PayByPayPal.h  PaymentStrategy.h  Program.cpp  StaticStrategyExample.cpp
tests/: CMakeLists.txt  test_PaymentStrategy.cpp
